# lightmark

./: .current-task.md  .dev-request.json  .dev-result.json  .gitignore  .pipeline-state.json  AUTOPILOT-QUICKREF.md  AUTOPILOT-README.md  BUILD-FAILURE-DIAGNOSIS.md  BUILD_FIX.md  BUILD_STATUS.md  CI-E2E-FAILURE-REPORT.md  CI-FINAL-STATUS-REPORT.md  CI-LOG-ANALYSIS.md  CI-STATUS-REPORT.md  CLOSED-LOOP-CHECK.md  CODE-FOLDING-COMPLETE.md  COMPONENT-AUDIT-REPORT.md  DEV-LOG.md  DEVELOPMENT_COMPLETE.md  E2E-FAILURE-ANALYSIS.md  E2E-FAILURE-DIAGNOSIS.md  FEATURES_PLAN.md  FIX_SUMMARY.md  FIX_WHITE_SCREEN.md  GITHUB-ACTIONS-STATUS.md  GITHUB_RELEASE_SETUP.md  INSTALL-AND-PUSH.md  INSTALL.md  MIGRATION-TO-CREPE.md  PIPELINE-CRON-SETUP.md  PIPELINE-DEPLOYMENT-v2.md  PIPELINE-DEPLOYMENT.md  PIPELINE-README.md  PROJECT_SUMMARY.md  PUSH-TO-GITHUB.md  QUICK-REFERENCE.md  README.md  REAL-AUTODEV-DEPLOYMENT.md  RELEASE.md  RELEASE_NOTES.md  (+24 more)
.github/workflows/: DEPLOY.md  README-CI.md  README.md  WINDOWS_BUILD.md  build-windows.yml  build.yml  test.yml
docs/: E2E-TEST-RUNNER.md
scripts/: install-playwright.sh
src/: App.svelte  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: COMPLETE-TEST-SUITE.md  COVERAGE-REPORT.md  FINAL-SUMMARY.md  README-TESTS.md  REGRESSION-CHECKLIST.md  TEST-ENHANCEMENT-PLAN.md  TEST-EXECUTION-REPORT.md  TESTING-GUIDE.md  build.test.js  component-boundary.test.js  editor-config.test.js  feature-unit.test.js  unit.test.js
(+32 files in other folders)
