[package]
name = "lightmark"
version = "0.1.0"
description = "高性能 Markdown 编辑器"
authors = ["OpenClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = { version = "0.10", features = ["simd"] }
tokio = { version = "1", features = ["full"] }
notify = "6.1"
once_cell = "1.19"
lazy_static = "1.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 1
